art128/motherland/css/style.css
/* ... */
/* HEADINGS */
/* 
    Based on a Traditional Typographic Scale 
    48, 36, 24, 21, 18, 16
*/

h1, h2, h3, h4, h5, h6 {
    margin: .5em 0; /*Using ems gives margins relative to the font size*/
}

h1 {
    font-size: 3em; /* 48px */
    line-height: 1;
}

h2 {
    font-size: 2.25em; /* 36px */
    line-height: 1.1;
    font-family: "utopia-std", serif;
    font-weight: 600;
    font-style: normal;
    color: #dbb818;
}
h3 {
    font-size: 1.5em; /* 24px */
    line-height: 1.2;
}
h4 {
    font-size: 1.3125em; /* 21px */
    line-height: 1.3;
}
h5 {
    font-size: 1.125em; /* 18px */
    line-height: 1.4;
}
h6 {
    font-size: 1em; /* 16px */
    line-height: 1.5;
}

/* PARAGRAPHS */
p {
    margin: .5em 0;
    max-width: 100%;
    text-wrap: pretty;
}
/* I changed max-width from 38em to see if 100% wide allows the blockquote to center in teh ngai section */

/* BLOCKQUOTES */

blockquote {
    font-family: "marydale", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 1.1em;
    color: rgb(209, 211, 212);
}

/* LINKS */
a {
    color: rgba(0, 0, 153, 0.8);
    text-decoration: none;
}

a:hover {
    color: rgba(0, 0, 153, 1);
    text-decoration: underline;
}

/* HELPER CLASSES */

.green {
    background-color: #223228;
}

/* IMAGES */
img {
    max-width: 100%;
    height: auto;
}

/* BUTTONS */
.button,
button, 
form input[type="submit"] {
    font-size: inherit;
    line-height: 1;
    background-color: #bcbec0;
    border: 1px solid #bcbec0;
    color: #223228;
    padding: 1em;
    display: inline-block;
    margin: .5em .5em .5em 0;
    text-align: center;
    border-radius: .5em;
}

.button:hover,
button:hover,
form input[type="submit"]:hover {
    background-color: #223228;
    border-color: #223228;
    color: #dbb818;
    text-decoration: none;
}

.button.alt {
    background-color: transparent;
    color: rgba(0, 0, 153, 1);
}

.button.alt:hover {
    background-color: rgba(0, 0, 153, 1);
    color: rgba(255, 255, 255, 1);
}

/* ADDING A LINE OF CODE HERE SO THE SUBMIT BUTTON HAS A POINTER WHEN HOVERING */
form input[type="submit"]:hover {
    cursor: pointer;
}


/* SIMPLE RESET */
* { 
    box-sizing: border-box; 
}

body { 
    margin: 0; 
    /* background: red; */
    /* box-shadow: inset 0 0 0 5px red; */
}


/* MEDIA QUERIES */
@media (min-width: 768px) {
    /* TABLET SIZED STYLING GOES HERE */
}

@media (min-width: 1050px) {
    /* SMALL LAPTOP SIZED STYLING GOES HERE */
    body {
        font-size: 87.5%; /* 14px */
    }
}

@media (min-width: 1250px) {
    /* MEDIUM SIZED STYLING GOES HERE */
    body {
        font-size: 100% /* 16px */
    }
    .container {
        max-width: 1400px;
    }
}

/* CONTAINER */
.container {
    max-width: 1400px;
    margin: 0 auto;
    padding: 0 4%;
}

/* SEMANTIC GRID SYSTEM */

.row > .column {
    margin-bottom: 4%; 
}

@media (min-width: 768px) {

    .row {
        --gridgap: 4%;
        display: flex;
        margin-left: -2%;
        margin-right: -2%;
    }

    .row.swappit {
        flex-direction: row-reverse;
    }

    .row > .column {
        flex-grow: 1;
        margin-left: 2%;
        margin-right: 2%;
    }

    .row > .column.one-twelfth {
        max-width: 4.3333%;
    }

    .row > .column.two-twelfths {
        max-width: 12.6667%;
    }

    .row > .column.three-twelfths {
        max-width: 21%;
    }

    .row > .column.four-twelfths {
        max-width: 29.3333%;
    }

    .row > .column.five-twelfths {
        max-width: 37.6667%;
    }

    .row > .column.six-twelfths {
        max-width: 46%;
    }

    .row > .column.seven-twelfths {
        max-width: 54.3333%;
    }

    .row > .column.eight-twelfths {
        max-width: 62.6666%;
    }

    .row > .column.nine-twelfths {
        max-width: 71%;
    }

    .row > .column.ten-twelfths {
        max-width: 79.3333%;
    }

    .row > .column.eleven-twelfths {
        max-width: 87.6667%;
    }

    .row > .column.centered {
        margin-left: auto;
        margin-right: auto;
    }

    .row > .push-one-twelfth {
        margin-left: calc(8.3333% - (var(--gridgap) / 2) + var(--gridgap));
      }

    /* .row > .push-two-twelfths {
        margin-left: calc(16.6667% - (var(--gridgap) / 2) + var(--gridgap));
    } */
}

/* FOR DEMO PURPOSES ONLY */
.demo .column{
    background: purple;
    padding: .5em;
    text-align: center;
}

/* SITE STRUCTURE */

/* SITE HEADER */

.site-header {
    padding: .5em 1.5em .5em 2.5em; /* this is my header padding */
    position: absolute;
    color: transparent;
    width: 100%;
    align-items: baseline;
}

.site-header {
    font-weight: 500;
}

header {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
}

.site-header a {
    color: rgba(255, 255, 255, 1);
}

.site-header a:hover {
    color: rgba(255, 255, 255, 1);
    text-decoration: none;
}

/* LOG0 AREA */
.site-id h1 {
    font-size: 1.5em;
    margin: 0;
    padding-top: .5em;
    text-align: left;
}

/* SITE FOOTER */

.site-footer {
    background: #dbb818;
    padding-top: 7.5em;
    position: relative;
    color: #223228;
    font-size: 85%;
}

.site-footer .container {
        text-align: center;
}

.site-footer a {
    color: rgba(0, 0, 0, 0.8);
}

.site-footer .site-nav a {
    text-decoration: none;
    position: relative;
    font-weight: 500;
}

.site-footer .site-nav a::after {
    transition: .6s;
    content: '';
    position: absolute;
    width: 100%;
    height: 2px;
    background: rgba(255, 255, 255, 1);
    left: 0%;
    bottom: 10%;
    transform: scaleX(0);
}
.site-footer .site-nav a:hover::after {
    transform: scaleX(1);
}
.site-footer .site-nav a:hover {
    color: rgba(255, 255, 255, 1);
}

footer .site-nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
    display: block;
}
/* ... */

